2005-05-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py: Attempt to do a smarter update of 
	text markups from versions < 1.9.0 with arbitrary nesting.

2005-05-04  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: convert to utf-8, and update.

2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.suse.spec.in: update from suse 2.4 package.

	* lily/*.cc: more <? >? to min/max changes

	* lily/include/interpretation-context-handle.hh: rename
	Interpretation_context_handle to Context_handle.

2005-05-04  Heikki Junes  <hjunes@cc.hut.fi>

	* input/regression/GNUmakefile (local_delete): use `find` together 
	with `xargs` to avoid too long argument-lists in cmd line.

2005-05-04  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/introduction.itely: updates "About this manual".

	* Documentation/user/advanced-notation.itely,
	invoking.itely: minor fixes.

2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* COPYING: add font exception. Update FSF address. 

	* lily/context-def.cc (path_to_acceptable_context): bugfix, depth
	should be taken without child context.

	* ly/chord-modifiers-init.ly (blackTriangleMarkup): use it.

	* scm/define-markup-commands.scm (triangle): new command, as
	robust replacement for unicode Delta/Triangle.

2005-05-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ps/music-drawing-routines.ps: add fillp argument.

	* lily/lookup.cc (round_filled_polygon): polygon takes filled? argument

	* lily/font-config.cc (init_fontconfig): don't add cff/

	* VERSION (PACKAGE_NAME): release 2.5.22

	* mf/GNUmakefile: remove cff/cff.ps/.map install rules.

	* lily/grace-engraver.cc (consider_change_grace_settings): use
	is_alias(). Fixes problem with CueVoice grace notes. 

	* lily/simultaneous-music-iterator.cc (construct_children): call
	Music_iterator::quit() for iterators that start out invalid. This
	fixes indefinitely continuing contexts.

	* buildscripts/substitute-encoding.py: new file
