@@ -1,3 +1,8 @@
+2005-05-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* Documentation/user/programming-interface.itely (How markups work
+	internally ): remove \encoding reference.
+
 2005-05-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* scripts/convert-ly.py: Attempt to do a smarter update of 
